@@ -1,25 +1,15 @@
 # Base Cube One
 
 This is the official repository of the smart environment framework Base Cube One.
-The project is split into different sub-module and each of these sub-module is stored in its own repository. This repository links to all sub-module repositories via ```git-modules```. The ```./workspace-prepare.sh``` script supports you to downloads the sourcecode of the sub-modules. Please checkout the documentation for more details:
 
 * [Documentation](https://basecubeone.org)  
 * [User Installation](https://basecubeone.org/user/installation.html)  
-* [Developer Installation](https://basecubeone.org/developer/)  
 * [Contribution](https://basecubeone.org/developer/contribution.html)  
 * [Community](https://openbase.org)
 
 ## How to build BCO
 
-Once you locally cloned the repo you can build BCO via gradle.
-Thus, you have to change into the project root folder e.g. `~/workspace/openbase/bco` and perform `./gradlew build`.
-
-## How to start BCO
-
-BCO is optimized for the long term java development kit 17, however some used dependencies still not support JDK 17.
-Therefore, you have to set the following JVM option to properly start bco: `--add-opens java.base/java.util=ALL-UNNAMED`
-
-You can do this via the environment variable `JAVA_OPTS="--add-opens java.base/java.util=ALL-UNNAMED"` or by declaring the vm option via IDEA.
+* [Please follow our developer tool chain setup guide.](https://basecubeone.org/developer/)  
 
 ## Update Gradle Dependencies
 
